tests/NormalTests/paczka2/big_fuzzy/82510713.err
Error in line 1: ThC9Up2IV A839 20,7
Error in line 6: tZ3a9Hi S738 22,5
Error in line 9: tZ3a9Hi A839 54,8
Error in line 11: N6U1s0 A839 61,0
Error in line 12: N6U1s0 S123 69,3
Error in line 4: ThC9Up2IV A520 74,4
Error in line 22: E1nz A5p0 80,1
Error in line 23: E1nz A520 102,5
Error in line 17: ThC9Up2IV A839 88,7
Error in line 38: ThC9Up2IV S123 22,7
Error in line 47: N6U1s0 A839 2,3
Error in line 53: tZ3a9Hi A839 42,7
Error in line 59: ThC9Up2IV A839 71,2
Error in line 68: S738 A520 25,0
Error in line 81: E1nz A520 h9,h
Error in line 56: tZ3a9Hi A520 26,8
Error in line 82: tZ3a9Hi A839 24,7
Error in line 57: odPzelg A839 90,9
Error in line 96: ThC9Up2IV A839 7,6
Error in line 105: ThC9Up2IV S738 1,4
Error in line 118: odPzelg S738 43,4
Error in line 106: S738 S738 9,7
Error in line 92: Ud29Pk S738 220,0
Error in line 124: Ud29Pk A520 96,1
Error in line 131: tZ3a9Hi A520 93,99
Error in line 130: tZ3a9Hi S738 82,1
Error in line 125: Ud29Pk S123 47,6
Error in line 120: S738 A839 71,5
Error in line 148: N6U1s0 A520 56,2
Error in line 136: S738 A520 4,0
Error in line 149: N6U1s0 S738 16,2
Error in line 128: E1nz A520 20,2
Error in line 155: E1nz S738 5,5
Error in line 153: N6U1s0 S123 4,6
Error in line 159: N6U1s0 A839 17,4
Error in line 156: E1nz A520 40,5
Error in line 179: N6U1s0 S738 37,3
Error in line 171: ThC9Up2IV A520 62,3
Error in line 193: S738 A839 64,17
Error in line 191: E1nz S738 85,7
Error in line 192: S738 S123 38,7
Error in line 187: tZ3a9Hi S123 15,9
Error in line 195: S738 A520 22,5
Error in line 198: N6U1s0 A839 57,0
Error in line 200: Ud29Pk A839 29,4
Error in line 205: S738 S123 40,0
Error in line 181: odPzelg A520 28,4
Error in line 208: ThC9Up2IV A839 9,0
Error in line 207: Ud29Pk A520 56,1
Error in line 214: tZ3a9Hi S123 86,6
Error in line 228: tZ3a9Hi A520 84,2
Error in line 227: ThC9Up2IV A520 43,3
Error in line 239: Ud29Pk S738 59,5
Error in line 231: E1nz A839 121,0
